docs/notebooks/tutorials/sources/both/RQA/test/mpi7.2176265.err
ERROR:2025-09-04 15:27:23,524:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:27:23,524:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:27:23,524:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:27:23,524:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:27:23,524:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:27:23,524:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:27:23,524:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:27:23,524:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:27:23,524:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:27:24,136:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:27:24,136:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:27:24,136:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:27:24,136:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:27:24,136:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:27:24,136:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:27:24,136:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:27:24,136:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:27:24,136:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
    B_local = main()
              ^^^^^^
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
                                     ^^^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 402, in bn_res_vec_mpi_2d
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
    return binary_op(*args)
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
    return call(*args)
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
    out = lax.add(x, y)
          ^^^^^^^^^^^^^
TypeError: add got incompatible shapes for broadcasting: (3, 20, 1681), (3, 121, 1681).
--------------------
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
    B_local = main()
              ^^^^^^
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
                                     ^^^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 402, in bn_res_vec_mpi_2d
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
    return binary_op(*args)
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
    return call(*args)
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
    out = lax.add(x, y)
          ^^^^^^^^^^^^^
TypeError: add got incompatible shapes for broadcasting: (3, 20, 1681), (3, 121, 1681).
--------------------
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
    B_local = main()
              ^^^^^^
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
                                     ^^^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 402, in bn_res_vec_mpi_2d
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
    return binary_op(*args)
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
    return call(*args)
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
    out = lax.add(x, y)
          ^^^^^^^^^^^^^
TypeError: add got incompatible shapes for broadcasting: (3, 20, 1681), (3, 121, 1681).
--------------------
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
    B_local = main()
              ^^^^^^
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
                                     ^^^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 402, in bn_res_vec_mpi_2d
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
    return binary_op(*args)
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
    return call(*args)
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
    out = lax.add(x, y)
          ^^^^^^^^^^^^^
TypeError: add got incompatible shapes for broadcasting: (3, 21, 1681), (3, 121, 1681).
--------------------
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
    B_local = main()
              ^^^^^^
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
                                     ^^^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 402, in bn_res_vec_mpi_2d
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
    return binary_op(*args)
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
    return call(*args)
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
    out = lax.add(x, y)
          ^^^^^^^^^^^^^
TypeError: add got incompatible shapes for broadcasting: (3, 20, 1681), (3, 121, 1681).
--------------------
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
    B_local = main()
              ^^^^^^
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
                                     ^^^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 402, in bn_res_vec_mpi_2d
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
    return binary_op(*args)
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
    return call(*args)
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
    out = lax.add(x, y)
          ^^^^^^^^^^^^^
TypeError: add got incompatible shapes for broadcasting: (3, 20, 1681), (3, 121, 1681).
--------------------
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
    B_local = main()
              ^^^^^^
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
                                     ^^^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 402, in bn_res_vec_mpi_2d
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
    return binary_op(*args)
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
    return call(*args)
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
    out = lax.add(x, y)
          ^^^^^^^^^^^^^
TypeError: add got incompatible shapes for broadcasting: (3, 20, 1681), (3, 121, 1681).
--------------------
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
    B_local = main()
              ^^^^^^
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
                                     ^^^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 402, in bn_res_vec_mpi_2d
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
    return binary_op(*args)
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
    return call(*args)
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
    out = lax.add(x, y)
          ^^^^^^^^^^^^^
TypeError: add got incompatible shapes for broadcasting: (3, 20, 1681), (3, 121, 1681).
--------------------
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
    B_local = main()
              ^^^^^^
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
                                     ^^^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 402, in bn_res_vec_mpi_2d
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
    return binary_op(*args)
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
    return call(*args)
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
    out = lax.add(x, y)
          ^^^^^^^^^^^^^
TypeError: add got incompatible shapes for broadcasting: (3, 20, 1681), (3, 121, 1681).
--------------------
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
    B_local = main()
    B_local = main()
              ^^^^^^
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
              ^^^^^^
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
                                     ^^^^^^^^^^^^^^^^^^
                                     ^^^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 402, in bn_res_vec_mpi_2d
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 402, in bn_res_vec_mpi_2d
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
    return binary_op(*args)
    return binary_op(*args)
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
    return call(*args)
           ^^^^^^^^^^^
    return call(*args)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
    out = lax.add(x, y)
          ^^^^^^^^^^^^^
TypeError: add got incompatible shapes for broadcasting: (3, 20, 1681), (3, 121, 1681).
    out = lax.add(x, y)
--------------------
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
          ^^^^^^^^^^^^^
TypeError: add got incompatible shapes for broadcasting: (3, 20, 1681), (3, 121, 1681).
--------------------
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
    B_local = main()
              ^^^^^^
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
                                     ^^^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 402, in bn_res_vec_mpi_2d
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
    return binary_op(*args)
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
    return call(*args)
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
    out = lax.add(x, y)
          ^^^^^^^^^^^^^
TypeError: add got incompatible shapes for broadcasting: (3, 20, 1681), (3, 121, 1681).
--------------------
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
    B_local = main()
    B_local = main()
              ^^^^^^
              ^^^^^^
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
                                     ^^^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 402, in bn_res_vec_mpi_2d
                                     ^^^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 402, in bn_res_vec_mpi_2d
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
    return binary_op(*args)
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
    return binary_op(*args)
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
    return call(*args)
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
    return call(*args)
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
    out = lax.add(x, y)
          ^^^^^^^^^^^^^
TypeError: add got incompatible shapes for broadcasting: (3, 20, 1681), (3, 121, 1681).
    out = lax.add(x, y)
--------------------
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
          ^^^^^^^^^^^^^
TypeError: add got incompatible shapes for broadcasting: (3, 20, 1681), (3, 121, 1681).
--------------------
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
    B_local = main()
    B_local = main()
              ^^^^^^
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
              ^^^^^^
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
                                     ^^^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 402, in bn_res_vec_mpi_2d
                                     ^^^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 402, in bn_res_vec_mpi_2d
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
    return binary_op(*args)
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
    return binary_op(*args)
    return call(*args)
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
    return call(*args)
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
    out = lax.add(x, y)
    out = lax.add(x, y)
          ^^^^^^^^^^^^^
TypeError: add got incompatible shapes for broadcasting: (3, 21, 1681), (3, 121, 1681).
          ^^^^^^^^^^^^^
--------------------
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
TypeError: add got incompatible shapes for broadcasting: (3, 21, 1681), (3, 121, 1681).
--------------------
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
    B_local = main()
              ^^^^^^
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
                                     ^^^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 402, in bn_res_vec_mpi_2d
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
    return binary_op(*args)
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
    return call(*args)
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
    out = lax.add(x, y)
          ^^^^^^^^^^^^^
TypeError: add got incompatible shapes for broadcasting: (3, 20, 1681), (3, 121, 1681).
--------------------
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
    B_local = main()
              ^^^^^^
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
                                     ^^^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 402, in bn_res_vec_mpi_2d
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
    return binary_op(*args)
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
    return call(*args)
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
    out = lax.add(x, y)
          ^^^^^^^^^^^^^
TypeError: add got incompatible shapes for broadcasting: (3, 20, 1681), (3, 121, 1681).
--------------------
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
srun: error: stellar-i07n19: tasks 0-1,3-8: Exited with exit code 1
srun: Terminating StepId=2176265.0
srun: error: stellar-i07n19: task 2: Exited with exit code 1
srun: error: stellar-i07n21: tasks 9-10,12-13,15-17: Exited with exit code 1
srun: error: stellar-i07n21: task 14: Terminated
srun: error: stellar-i07n21: task 11: Exited with exit code 1
srun: Force Terminated StepId=2176265.0
